[package]
name = "avl"
version = "0.1.0"
authors = ["mingyaang <mmao@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
path = "src/my_benchmark.rs"
harness = false
